--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -29,6 +29,8 @@ requirements:
   run:
     - python >=${{ python_min }}
     - textual >=7.3.0
+    # https://github.com/executablebooks/markdown-it-py/blob/49043e4445d233598fb893bed6949f7b25ae4e27/pyproject.toml#L45
+    - linkify-it-py >=1,<3
     - click >=8.2.1
     - gitpython >=3.1.44
     - tree_sitter >=0.24.0
