--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -28,7 +28,7 @@ requirements:
     - pip
   run:
     - python >=${{ python_min }}
-    - textual >=7.3.0
+    - textual >=7.5.0
     - click >=8.2.1
     - gitpython >=3.1.44
     - tree_sitter >=0.24.0
@@ -49,6 +49,7 @@ requirements:
     - watchdog >=6.0.0
     - setproctitle >=1.3.7
     - psutil >=7.2.1
+    - aiosqlite >=0.22.1
     - xclip
 
 tests:
